code cleanup, validation added#

--- a/src/Application/UserManagement.Application.csproj
+++ b/src/Application/UserManagement.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
@@ -18,8 +19,6 @@
 
   <ItemGroup>
     <Folder Include="Core\Email\Query\" />
-    <Folder Include="Core\User\command\" />
-    <Folder Include="Core\User\query\" />
   </ItemGroup>
 
 </Project>
