changes done for user/country entity, application - logic added UI - controllers and end points added docker - yml added

--- a/src/UserManagement.Api/appsettings.json
+++ b/src/UserManagement.Api/appsettings.json
@@ -1,9 +1,48 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=host.docker.internal,1433;Database=UserManagementDb;User Id=sa;Password=Qwer1234;TrustServerCertificate=True;Max Pool Size=100;",
+    "Redis": "host.docker.internal:6379"
   },
-  "AllowedHosts": "*"
-}
+    "Serilog": {
+      "MinimumLevel": "Information",
+      "WriteTo": [
+        {
+          "Name": "Console",
+          "Args": { "restrictedToMinimumLevel": "Information" }
+        },
+        {
+          "Name": "File",
+          "Args": {
+            "path": "Logs\\log-.txt",
+            "rollingInterval": "Day",
+            "retainedFileCountLimit": 7
+          }
+        }
+      ],
+      "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+      "Properties": {
+        "Application": "UserManagementApp"
+      }
+    },
+    "RateLimiter": {
+      "Enabled": true,
+      "RequestLimit": 100,
+      "TimeWindowInSeconds": 60
+    },
+
+    "Kestrel": {
+      "Endpoints": {
+        "Http": {
+          "Url": "http://*:5000"
+        }
+      }
+    },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    }
+  }
